# trailio

./: .gitignore  .gitmodules  misc.txt
osm/: Dockerfile  imposm.cfg  run.sh  trails_mapping.yaml
osm/container/: Dockerfile  features_mapping.yaml  runImposm.sh  trails_mapping.yaml
osm/scripts/: importOsm.sh  runImposm.sh
scripts/: prep_db.py  prep_raster.py  setup_local.cfg
tiles/dev/: start
tiles/style/: app.db
tiles/style/project/style/: base.mss  labels.mss  palette.mms  project.mml  roads.mss  style.mss
tiles/style/project/style/layers/: hillshade.vrt  test.tif
tiles/style/project/trailio-tiles/: base.mss  labels.mss  palette.mss  project.mml  roads.mss  style.mss
tiles/style/project/trailio-tiles/layers/: hillshade.tif  hillshade.vrt
trails/: run.sh  stack.yaml  test.sh  trails.cabal
trails/app/: Main.hs
trails/client/: Main.hs
trails/src/: API.hs  DB.hs  Geo.hs  JSON.hs  LRU.hs  Parser.hs  Ref.hs  Trails.hs  Types.hs
trails/tests/: QuerySpec.hs
trails_frontend/: .yo-rc.json  README.md  index.html  package-lock.json  package.json  server.js
trails_frontend/js/components/: Home.js  MapComponent.js
trails_frontend/public/: api.js  index.html  manifest.json
trails_frontend/src/actions/: map.js
trails_frontend/src/components/: MapComponent.js  index.js
trails_frontend/src/constants/: ActionTypes.js
trails_frontend/src/containers/: MapContainer.js
trails_frontend/src/reducers/: counter.js  index.js  map.js
trails_frontend/src/routes/: index.js
trails_frontend/src/store/: store.dev.js  store.prod.js
