name:                trails
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/trails#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:      DB
                      --, LRU
                      , Ref
                      --, Cache 
                      , JSON
                      , Types
                      , API
                      , Trails
                      , Geo
  build-depends:       base
                      , haskell-postgis
                      , hashable
                      , psqueues
                      , vector
                      , bytestring
                      , mtl
                      , postgresql-simple
                      , aeson
                      , containers
                      , servant
                      , servant-server
                      , servant-docs
                      , text
                      , transformers
                      , binary
                      , template-haskell
                      , uri-encode
                

  default-language:    Haskell2010

executable trails-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , trails
                    , servant-server
                    , warp
                    , wai-extra
                    , aeson
                    , transformers
                    , filepath
                    , bytestring
                    , optparse-applicative
                    , directory
                    , wai-cors
                    , data-default

  default-language:    Haskell2010

executable trails-gen
  hs-source-dirs: gen
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , trails
                    , servant-js
                    , text
                    , aeson
                    , transformers
                    , filepath
                    , bytestring
                    , optparse-applicative
                    , directory
                    , data-default

  default-language:    Haskell2010




executable trails-client
  hs-source-dirs:     client
  main-is:            Main.hs

  build-depends:       base
                     , servant-client
                     , servant
                     , optparse-applicative
                     , http-client
                     , trails
                     , containers
                     , optparse-generic
                     , text
                     , aeson
                     , aeson-pretty
                     , haskell-postgis
                     , bytestring

  default-language:    Haskell2010
  ghc-options:      -Wall -fno-warn-orphans


test-suite trails-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , trails
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/trails
